@@ -1,0 +1,3 @@
+var name = "test7.py";
+exec(["python", name]);
+exec("python", "../spl.py", "perf.sp");
